--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>COOL generator</h1>
     <input type="color" class="color1" name="color1" value="#00ff00">
     <input type="color" class="color2" name="color2" value="#ff0000">
-    <h2>current css background</h2>
+    <h2>This is the background</h2>
     <h3></h3>
     <h3 class="random"><button>random color</button></h3>
     <script src="script.js"></script>
