--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="gradient">
-    <h1>COOL generator</h1>
+    <h1>Background generator</h1>
     <input type="color" class="color1" name="color1" value="#00ff00">
     <input type="color" class="color2" name="color2" value="#ff0000">
     <h2>This is the background</h2>
